--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -31,6 +29,8 @@ body {
   display: flex;
   width: 100vw;
   height: 100vh;
+  color: black;
+  background-color: #e4e4e4;
 }
 
 h1 {
@@ -45,8 +45,5 @@ h1 {
   }
   a:hover {
     color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
